# thanote

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  conanfile.txt  log.txt  run.sh  tests.sh  todo.md
lib/pecc/: CMakeLists.txt
lib/pecc/include/: pecc.h
lib/pecc/src/: pecc.cpp
lib/pecc/tests/: pecc_tests.cpp  pecc_tests2.cpp
src/: MainWindow.cpp  MainWindow.h  ThanoteApplication.cpp  ThanoteApplication.h  main.cpp  plusone.cpp
tests/: plusone_test.cpp
